// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem onClick 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-popover2-dismiss"
      role="menuitem"
      tabindex="0"
      title="Button Hello"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      >
        Button Hello
      </div>
    </a>
  </li>
</div>
`;

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem renders 1`] = `
<div>
  <li
    class=""
    role="none"
  >
    <a
      class="bp4-menu-item bp4-popover2-dismiss"
      role="menuitem"
      tabindex="0"
      title="Button Hello"
    >
      <div
        class="bp4-fill bp4-text-overflow-ellipsis"
      />
    </a>
  </li>
</div>
`;

exports[`ButtonOverflowMenuToolbarItem ButtonOverflowMenuToolbarItem renders empty due to incorrect type 1`] = `<div />`;
